# internal/controller/dashboard_controller.go
@@ -8,6 +8,14 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+// @Summary Get dashboard ketua umum
+// @Description Mengambil data dashboard ketua umum berupa total kegiatan, total inovasi, total pengguna, serta jumlah data berdasarkan status
+// @Tags Ketua Umum Dashboard
+// @Security BearerAuth
+// @Produce json
+// @Success 200 {object} map[string]interface{}
+// @Failure 500 {object} map[string]interface{}
+// @Router /api/ketua/dashboard [get]
 func GetDashboardKetua(c *gin.Context) {
 
 	data, err := usecases.GetDashboardData()
